--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,35 @@
     <title>Todo List</title>
   </head>
   <body>
-    Hello World
+    <header><h1 class="app-name">Todo List</h1></header>
+    <main>
+      <nav>
+        <ul class="nav-list">
+          <li class="nav-item"><h2 class="nav-title">Default</h2></li>
+          <li class="nav-item"><h2 class="nav-title">Today</h2></li>
+          <li class="nav-item"><h2 class="nav-title">7 Days</h2></li>
+          <li class="nav-item">
+            <div class="nav-link" data-id="new-project">
+              <span class="new-project-text">Add Project</span>
+            </div>
+          </li>
+          <li class="nav-item">
+            <h2 class="nav-title">Projects</h2>
+            <ul class="projects-list">
+              <li class="nav-project-item" data-id="project-id">Temp Name</li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+      <section id="main-content">
+        <h3 class="test-h3">Test</h3>
+        <p class="test-p">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus
+          voluptatem fuga animi sunt quam, minima recusandae obcaecati assumenda
+          et veritatis, nulla velit pariatur, culpa voluptas voluptatibus quia
+          quibusdam deserunt molestias.
+        </p>
+      </section>
+    </main>
   </body>
 </html>
