--- a/src/template.html
+++ b/src/template.html
@@ -22,6 +22,7 @@
             <h2 class="nav-title">Projects</h2>
             <ul class="projects-list">
               <li class="nav-project-item" data-id="project-id">Temp Name</li>
+              <li class="nav-project-item" data-id="project-id2">Other Name</li>
             </ul>
           </li>
         </ul>
