--- a/src/template.html
+++ b/src/template.html
@@ -46,7 +46,7 @@
               </li>
               <li class="todo-bottom">
                 <div class="todo-due-date">7/11/2025</div>
-                <div class="todo-priority high-priority">High</div>
+                <div class="todo-priority priority high-priority">High</div>
               </li>
             </ul>
           </li>
