Finish project todo page

--- a/src/template.html
+++ b/src/template.html
@@ -50,6 +50,20 @@
               </li>
             </ul>
           </li>
+          <li class="todo-list-item" data-id="todo-id-2">
+            <ul>
+              <li class="todo-top">
+                <button class="complete-btn">Check</button>
+                <div class="todo-title-div">Todo Title 2</div>
+                <button class="edit-btn" data-id="todo-id-2">Edit</button>
+                <button class="delete-btn" data-id="todo-id-2">Delete</button>
+              </li>
+              <li class="todo-bottom">
+                <div class="todo-due-date">8/11/2025</div>
+                <div class="todo-priority priority medium-priority">Medium</div>
+              </li>
+            </ul>
+          </li>
         </ul>
       </section>
     </main>
