Fix errors for init load

--- a/src/template.html
+++ b/src/template.html
@@ -22,50 +22,11 @@
           </li>
           <li class="nav-item">
             <h2 class="nav-title">Projects</h2>
-            <ul class="projects-list">
-              <li class="nav-project-item" data-id="project-id">Temp Name</li>
-              <li class="nav-project-item" data-id="project-id2">Other Name</li>
-            </ul>
+            <ul class="projects-list"></ul>
           </li>
         </ul>
       </nav>
-      <section id="main-content" data-id="project-id">
-        <div class="project-title-div">
-          <h2 class="project-title">Project Test</h2>
-          <button class="edit-btn" data-id="project-id">Edit</button>
-          <button class="delete-btn" data-id="project-id">Delete</button>
-        </div>
-        <ul class="todo-list flex-col">
-          <li class="todo-list-item" data-id="todo-id-1">
-            <ul>
-              <li class="todo-top">
-                <button class="complete-btn">Check</button>
-                <div class="todo-title-div">Todo Title 1</div>
-                <button class="edit-btn" data-id="todo-id-1">Edit</button>
-                <button class="delete-btn" data-id="todo-id-1">Delete</button>
-              </li>
-              <li class="todo-bottom">
-                <div class="todo-due-date">7/11/2025</div>
-                <div class="todo-priority priority high-priority">High</div>
-              </li>
-            </ul>
-          </li>
-          <li class="todo-list-item" data-id="todo-id-2">
-            <ul>
-              <li class="todo-top">
-                <button class="complete-btn">Check</button>
-                <div class="todo-title-div">Todo Title 2</div>
-                <button class="edit-btn" data-id="todo-id-2">Edit</button>
-                <button class="delete-btn" data-id="todo-id-2">Delete</button>
-              </li>
-              <li class="todo-bottom">
-                <div class="todo-due-date">8/11/2025</div>
-                <div class="todo-priority priority medium-priority">Medium</div>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </section>
+      <section id="main-content"></section>
     </main>
   </body>
 </html>
