Fix sidebar loading

--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,7 @@
     <main>
       <nav>
         <ul class="nav-list">
-          <li class="nav-item" data-id="default-id">
+          <li class="nav-item" data-id="default-id" id="default-li">
             <h2 class="nav-title">Default</h2>
           </li>
           <li class="nav-item"><h2 class="nav-title">Today</h2></li>
