--- a/src/template.html
+++ b/src/template.html
@@ -14,10 +14,9 @@
             <h2 class="nav-title">Default</h2>
           </li>
           <li class="nav-item"><h2 class="nav-title">Today</h2></li>
-          <li class="nav-item"><h2 class="nav-title">7 Days</h2></li>
           <li class="nav-item">
             <div class="nav-link" data-id="new-project">
-              <span class="new-project-text">Add Project</span>
+              <span class="new-project-text">+ Add Project</span>
             </div>
           </li>
           <li class="nav-item">
